# src/controllers/notes.ts
@@ -1,7 +1,7 @@
-import { Route, Tags, Post, Get, Controller, Body, Query, Security } from "tsoa";
+import { Route, Tags, Post, Get, Controller, Body, Query, Patch, Delete } from "tsoa";
 import { Response } from '../models/interfaces';
 import NoteModel from '../models/notes';
-import { getAll, upsert } from "../helpers/db";
+import { deleteById, getAll, upsert } from "../helpers/db";
 import ProductsModel from '../models/products';
 import { Request } from "express";
 import StatementController from "./statements";
@@ -129,6 +129,50 @@ export default class PartyController extends Controller {
         catch (err: any) {
             console.log(err);
 
+            return {
+                data: null,
+                error: err.message ? err.message : err,
+                message: '',
+                status: 400
+            }
+        }
+    }
+
+    @Patch("/cancelNote")
+    public async cancelNote(@Body() request: { id: string, cancel: boolean }): Promise<Response> {
+        try {
+            const { id, cancel} = request;
+            const updated = await upsert(NoteModel, {status: cancel ? 'CANCELLED' : 'ACTIVE'}, id)
+            
+            return {
+                data: updated,
+                error: '',
+                message: 'Success',
+                status: 200
+            }
+        }
+        catch (err: any) {
+            return {
+                data: null,
+                error: err.message ? err.message : err,
+                message: '',
+                status: 400
+            }
+        }
+    }
+
+    @Delete("/delete")
+    public async delete(@Query() id: string): Promise<Response> {
+        try {
+            const deleted = await deleteById(NoteModel, id);
+            return {
+                data: deleted,
+                error: '',
+                message: 'Successfully deleted!',
+                status: 200
+            }
+        }
+        catch (err: any) {
             return {
                 data: null,
                 error: err.message ? err.message : err,
