# src/controllers/proformaInvoices.ts
@@ -1,7 +1,7 @@
-import { Route, Tags, Post, Get, Controller, Body, Query, Security } from "tsoa";
+import { Route, Tags, Post, Get, Controller, Body, Query, Patch, Delete } from "tsoa";
 import { Response } from '../models/interfaces';
 import InvoiceModel from '../models/proformaInvoice';
-import { getAll, upsert } from "../helpers/db";
+import { deleteById, getAll, upsert } from "../helpers/db";
 import { getOtp } from '../helpers/utility'
 import { Request } from "express";
 
@@ -166,6 +166,50 @@ export default class PartyController extends Controller {
         catch (err: any) {
             console.log(err);
 
+            return {
+                data: null,
+                error: err.message ? err.message : err,
+                message: '',
+                status: 400
+            }
+        }
+    }
+
+    @Patch("/cancelProformaInvoice")
+    public async cancelProformaInvoice(@Body() request: { id: string, cancel: boolean }): Promise<Response> {
+        try {
+            const { id, cancel} = request;
+            const updated = await upsert(InvoiceModel, {status: cancel ? 'CANCELLED' : 'ACTIVE'}, id)
+            
+            return {
+                data: updated,
+                error: '',
+                message: 'Success',
+                status: 200
+            }
+        }
+        catch (err: any) {
+            return {
+                data: null,
+                error: err.message ? err.message : err,
+                message: '',
+                status: 400
+            }
+        }
+    }
+
+    @Delete("/delete")
+    public async delete(@Query() id: string): Promise<Response> {
+        try {
+            const deleted = await deleteById(InvoiceModel, id);
+            return {
+                data: deleted,
+                error: '',
+                message: 'Successfully deleted!',
+                status: 200
+            }
+        }
+        catch (err: any) {
             return {
                 data: null,
                 error: err.message ? err.message : err,
