# src/routes/invoices/purchaseInvoice.ts
@@ -35,10 +35,30 @@ Route.get('/purchase/get', async (req: Request, res: Response) => {
         return res.send(respsone)
     }
 });
-// Route.get('/get', (req: Request, res: Response) => {
-//     const controller = new PartyController();
-//     const respsone = controller.login();
-//     return res.send(respsone)
-// });
+Route.patch('/purchase/cancelPurchaseInvoice', async (req: Request, res: Response) => {
+    const body = req.body;
+    const { id, cancel } = body;
+    const controller = new PurchaseController(req);
+    const respsone = await controller.cancelPurchaseInvoice({
+        id, cancel
+    });
+    return res.send(respsone)
+});
+
+Route.delete('/purchase/delete', async (req: Request, res: Response) => {
+    const query = req.query.id;
+    const controller = new PurchaseController(req);
+    if (query) {
+        const respsone = await controller.delete(query.toString());
+        return res.send(respsone)
+    } else {
+        res.send({
+            data: null,
+            error: 'Please enter a valid id',
+            message: '',
+            status: 400
+        })
+    }
+});
 
 module.exports = Route;
