# src/routes/invoices/saleInvoice.ts
@@ -91,4 +91,31 @@ Route.post('/sale/updateSerialNumber', async (req: Request, res: Response) => {
     return res.send(respsone)
 });
 
+Route.patch('/sale/cancelSaleInvoice', async (req: Request, res: Response) => {
+    const body = req.body;
+    const { id, cancel } = body;
+    const controller = new SaleController(req);
+    const respsone = await controller.cancelSaleInvoice({
+        id, cancel
+    });
+    return res.send(respsone)
+});
+
+Route.delete('/sale/delete', async (req: Request, res: Response) => {
+    const query = req.query.id;
+    const controller = new SaleController(req);
+    if (query) {
+        const respsone = await controller.delete(query.toString());
+        return res.send(respsone)
+    } else {
+        res.send({
+            data: null,
+            error: 'Please enter a valid id',
+            message: '',
+            status: 400
+        })
+    }
+});
+
+
 module.exports = Route;
