# src/routes/notes/notes.ts
@@ -43,10 +43,30 @@ Route.get('/get', async (req: Request, res: Response) => {
         return res.send(respsone)
     }
 });
-// Route.get('/get', (req: Request, res: Response) => {
-//     const controller = new PartyController();
-//     const respsone = controller.login();
-//     return res.send(respsone)
-// });
+Route.patch('/cancelNote', async (req: Request, res: Response) => {
+    const body = req.body;
+    const { id, cancel } = body;
+    const controller = new NotesController(req);
+    const respsone = await controller.cancelNote({
+        id, cancel
+    });
+    return res.send(respsone)
+});
+
+Route.delete('/delete', async (req: Request, res: Response) => {
+    const query = req.query.id;
+    const controller = new NotesController(req);
+    if (query) {
+        const respsone = await controller.delete(query.toString());
+        return res.send(respsone)
+    } else {
+        res.send({
+            data: null,
+            error: 'Please enter a valid id',
+            message: '',
+            status: 400
+        })
+    }
+});
 
 module.exports = Route;
